fix grid spacing for main-content, add responsive text sizing

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,11 +6,16 @@ html {
     padding: 0;
 }
 
+html {
+    font-size: clamp(12px, 1vw, 36px); 
+}
+
+
 body {
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 1fr 8fr;
 }
 
@@ -27,13 +32,15 @@ h1 {
 }
 
 h2 {
-    display:inline;
-
+    position:relative;
+    left:5%;
+    color: #cbd5e1;
+    font-size: clamp(1rem, 1.5vw, 3rem); 
 }
 
 h3 {
     display:inline;
-    font-size: clamp(1rem, 1vw, 2rem); 
+    font-size: clamp(1rem, 1vw, 3rem); 
 }
 
 .sidebar {
@@ -45,7 +52,7 @@ h3 {
 a {
     text-decoration: none;
     color:#cbd5e1;
-    font-size: 20px;
+    font-size: 1.5rem;
     display:grid;
     grid-template-columns: 1fr 10fr;
     align-items: center;
@@ -84,12 +91,12 @@ a {
 }
 
 #topIcon {
-    width: 40px;
+    width: 30px;
     border-radius:50%;
 }
 
 #botIcon {
-    width:60px;
+    height:40px;
     border-radius: 50px;
 }
 
@@ -117,10 +124,15 @@ input {
 
 .profile {
     background-color: lightsalmon;
+    background-color: #cbd5e1;
+
 }
 
 .welcome {
     background-color: lightseagreen;
+    background-color: #cbd5e1;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .actions {
@@ -132,9 +144,8 @@ input {
 
 .actions > .action {
     border-radius:40px;
-    padding:10px;
-    height:36px;
-    width:80px;
+    height:50%;
+    width:30%;
     background-color: #1e293b;
     color:#cbd5e1;
     font-weight:700;
@@ -143,7 +154,7 @@ input {
 .main-content {
     background-color: lightpink;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
 }
 
@@ -151,6 +162,7 @@ input {
 
 .projects {
     background-color: lightpink;
+    background-color: #64748b;
     grid-area: 1/1/3/2;
 }
 
@@ -164,47 +176,48 @@ input {
 }
 
 .projectCard {
-    background-color: #cbd5e1;
-    padding:20px;
+    background-color: #f1f5f9;
     border-radius:10px;
     box-shadow: 5px 5px 15px 0px #000000;
+    padding:20px;
 }
 
 .announcements {
     background-color: lightblue;
+    background-color: #64748b;
 }
 
 .announcementCards {
     display: grid;
-    height:75%;
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 5%;
     margin: 5%;
+    border-radius:20px;
+    background-color: #cbd5e1;
 }
 
 .announcementCard {
-    background-color: #cbd5e1;
+    background-color: #f1f5f9;
     border-radius: 10px;
-    padding: 5px;
     box-shadow: 5px 5px 15px -4px #000000;
+    padding:10px;
 }
 
 .trending {
     background-color: lightgreen;
+    background-color: #64748b;
 }
 
 .trendingCards {
     display: grid;
-    height:60%;
     grid-gap: 5%;
     margin: 5%;
     grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
 .trendingCard {
-    background-color: antiquewhite;
-    border-radius:20px;
-    padding:20px;
+    background-color: #f1f5f9;
+    border-radius:10px;
     box-shadow: 5px 5px 15px -4px #000000;
 }
 
